# CCNLTHD-HScoreServer

./: Dockerfile  entrypoint.sh  pyproject.toml
scoremanagementapp/: settings.py
scores/: views.py
scores/migrations/: 0005_alter_score_action.py
