[tool.poetry]
name = "ccnlthd-hscoreserver"
version = "0.1.0"
description = ""
authors = ["xianchenw"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
asgiref = "^3.8.1"
certifi = "^2024.8.30"
cffi = "^1.17.1"
charset-normalizer = "^3.4.0"
coreapi = "^2.3.3"
coreschema = "^0.0.4"
cryptography = "^43.0.3"
drf-yasg = "^1.21.8"
pillow = "^11.0.0"
django-cors-headers = "^4.6.0"
django-oauth-toolkit = "^3.0.1"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-ckeditor-5 = "^0.2.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
